--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<h1>3 random images</h1>
+
+	<nav>
+		<ul>
+			<li><a href="https://course.acciojob.com/modules" target="_blank">Home</a></li>
+			<li><a href="https://course.acciojob.com/modules" target="_blank">About us</a></li>
+			<li><a href="https://course.acciojob.com/modules" target="_blank">Contact us</a></li>
+		</ul>
+	</nav>
+
+	<img src="https://picsum.photos/id/123/200/300" alt="pic">
+	<img src="https://picsum.photos/id/124/200/300" alt="pic">
+	<img src="https://picsum.photos/id/125/200/300" alt="pic">
     <script type="text/javascript" src="./script.js">
 </script>
 
